--- a/src/App.css
+++ b/src/App.css
@@ -81,10 +81,11 @@ body::before {
 }
 
 .chat-window {
+  height: 900px;
   width: 500px;
   /* height: 550px; */
   border-radius: 10px;
-  border: 1px solid #132d48;
+  border: 1px solid #d3d3d3;
 }
 
 .chat-window p {
@@ -93,23 +94,22 @@ body::before {
 .chat-window .chat-header {
   height: 50px;
   border-radius: 9px 9px 0 0;
-  background: #071a2e;
+  background: #fff;
   position: relative;
   cursor: pointer;
-  border-bottom: 2px solid #132d48;
+  border-bottom: 1px solid #d3d3d3;
 }
 .chat-window .chat-header p {
   display: block;
   padding: 0 1em 0 2em;
-  color: #fff;
+  color: #071a2e;
   font-weight: 700;
   line-height: 45px;
 }
 
 .chat-window .chat-body {
-  height: 600px;
-  /* border: 1px solid #263238; */
-  background: #001f3d;
+  height: 800px;
+  background-image: url("https://t4.ftcdn.net/jpg/01/95/42/21/360_F_195422106_cNzNOmCmgf0QbxDVfuOoEc2zEl0gYIL0.jpg");
 
   position: relative;
 }
@@ -131,12 +131,13 @@ body::before {
 
 .chat-window .chat-body .message .message-content {
   width: auto;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 15px 10px 0;
+
   /* min-height: 40px; */
   max-width: 400px;
-  background-color: #0070e3;
+  background-color: #fff;
   border-radius: 50px;
-  color: white;
+  color: #071a2e;
   display: flex;
   align-items: center;
   margin-right: 5px;
@@ -156,7 +157,8 @@ body::before {
 #you .message-meta {
   justify-content: flex-start;
   margin: 5px 5px 0 5px;
-  color: #fff;
+  color: #071a2e;
+  padding: 10px 0;
 }
 
 #other {
@@ -173,7 +175,7 @@ body::before {
 #other .message-meta {
   justify-content: flex-end;
   margin: 5px 5px 0 5px;
-  color: #fff;
+  color: #071a2e;
 }
 
 .message-meta #author {
@@ -186,21 +188,28 @@ body::before {
   font-size: 12px;
 }
 
+#message-box {
+  background-color: #fff !important;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px 0px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px 0px;
+  border-radius: 10px;
+}
+
 .chat-window .chat-footer {
-  height: 50px;
-  border-top: 1px solid #18385a;
+  height: 47px;
+  border-top: 1px solid #d3d3d3;
   /* border-top: none; */
   border-radius: 0 0 9px 9px;
   display: flex;
   justify-content: space-between;
-  background-color: #132d48;
+  background-color: #fff;
 }
 .btn_send {
   display: flex;
   align-items: center;
 }
 ::placeholder {
-  color: #d7d7d7;
+  color: #071a2e;
 }
 .chat-window .chat-footer input {
   height: 100%;
@@ -210,7 +219,7 @@ body::before {
   outline: none;
   padding: 0 0.7em;
 
-  color: #fff;
+  color: #071a2e;
   background: transparent;
   font-size: 1em;
   /* border-right: 1px dotted #607d8b; */
